# VulkanRTSEngine

./: .gitignore  CMakeLists.txt  Copying.md  LicenseNotes.md  ReadMe.md
Source/BenchTable/: CMakeLists.txt  Precomp.h  main.cpp
Source/BenchTable/DirList/: DirList.cpp
Source/BenchTable/FrustumCulling/: FrustumCulling.cpp
Source/BenchTable/Pool/: Pool.cpp  PoolFreelist.h  PoolHeaderElem.h
Source/BenchTable/Profiling/: BaseProfiler.cpp  ChronoProfiler.cpp  CommonTypes.h  QPCProfiler.cpp
Source/BenchTable/QuadTree/: QuadTree.cpp  QuadTree.h  QuadTreeBF.h  QuadTreeBFNaive.h  QuadTreeHG.h  QuadTreeNaive.h  QuadTreeOriginal.h
Source/BenchTable/RenderJob/: RenderJob.cpp
Source/BenchTable/Serialization/: CommonTypes.h  VariadicStorage.cpp  VirtualOrdered.cpp  VirtualUnordered.cpp
Source/BenchTable/Skeleton/: SkeletonCommon.h  SkeletonDirty.cpp  SkeletonIter.cpp
Source/BenchTable/StableVector/: ExpStableVector.h  StableVector.cpp
Source/Core/: CMakeLists.txt  CRC32.h  Camera.cpp  Camera.h  CmdBuffer.h  DataEnum.h  File.cpp  File.h  Graphics.cpp  Graphics.h  Grid.h  LazyVector.h  Pool.h  Precomp.cpp  Precomp.h  Profiler.cpp  Profiler.h  QuadTree.h  RWBuffer.h  RefCounted.cpp  RefCounted.h  Shapes.cpp  Shapes.h  StableVector.h  StaticString.h  StaticVector.h  Transform.cpp  Transform.h  TrippleBuffer.cpp  UID.cpp  UID.h  Utils.cpp  Utils.h  VariantMap.cpp  VariantMap.h  VariantUtils.h  Vertex.h  VertexDescriptor.cpp  VertexDescriptor.h
Source/Core/Algos/: DiamondSquareAlgo.h  LinearPoissonSampling.cpp  LinearPoissonSampling.h
Source/Core/Debug/: Assert.cpp  Assert.h  Assert.inl  DebugDrawer.cpp  DebugDrawer.h
Source/Core/Graphics/: AssetTracker.cpp  AssetTracker.h  Descriptor.cpp  Descriptor.h  Graphics.cpp  Graphics.h  GraphicsTypes.h  IGPUAllocator.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderable.cpp  Renderable.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBlock.cpp  UniformBlock.h
Source/Core/Resources/: AssetTracker.cpp  AssetTracker.h  BinarySerializer.cpp  BinarySerializer.h  JsonSerializer.cpp  JsonSerializer.h  Resource.cpp  Resource.h  Serializer.cpp  Serializer.h
Source/Core/Threading/: AssertMutex.cpp  AssertMutex.h  AssertRWMutex.cpp  AssertRWMutex.h
Source/DungeonEditor/: CMakeLists.txt  Editor.cpp  Editor.h  PaintingRenderPass.cpp  PaintingRenderPass.h  Precomp.h  main.cpp
Source/Engine/: Audio.cpp  Audio.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  EngineSettings.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameTaskManager.cpp  GameTaskManager.h  Graphics.cpp  Graphics.h  GraphicsGL.cpp  GraphicsGL.h  GraphicsVK.cpp  GraphicsVK.h  Grid.cpp  Grid.h  Input.cpp  Input.h  Light.cpp  Light.h  Precomp.h  RenderThread.cpp  RenderThread.h  Terrain.cpp  Terrain.h  Tests.cpp  Tests.h  Transform.cpp  Transform.h  TrippleBuffer.cpp  TrippleBuffer.h  UID.cpp  UID.h  Utils.h  (+5 more)
Source/Engine/Animation/: AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h  AnimationSystem.cpp  AnimationSystem.h  Skeleton.cpp  Skeleton.h  SkinnedVerts.h
Source/Engine/Components/: AnimationTest.cpp  AnimationTest.h  ComponentBase.cpp  ComponentBase.h  EditorMode.cpp  EditorMode.h  Missile.cpp  Missile.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerTank.cpp  PlayerTank.h  Renderer.h  Tank.cpp  Tank.h  TankArenaGameMode.cpp  TankArenaGameMode.h  VisualComponent.cpp  VisualComponent.h
Source/Engine/Graphics/: NamedFrameBuffers.h  UniformAdapter.cpp  UniformAdapter.h  UniformAdapterRegister.cpp  UniformAdapterRegister.h
Source/Engine/Graphics/Adapters/: AdapterSourceData.h  CameraAdapter.cpp  CameraAdapter.h  ObjectMatricesAdapter.cpp  (+9 more)
Source/Engine/Resources/: FileWatcher.cpp  FileWatcher.h  GLTFImporter.cpp  GLTFImporter.h  ImGUISerializer.cpp  ImGUISerializer.h  OBJImporter.cpp  OBJImporter.h
Source/Engine/Systems/: ProfilerUI.cpp  ProfilerUI.h
Source/Engine/UIWidgets/: AssetTrackerDialog.cpp  AssetTrackerDialog.h  EntitiesWidget.cpp  EntitiesWidget.h  FileDialog.cpp  FileDialog.h  GameTasksDialog.cpp  GameTasksDialog.h  GltfImportDialog.cpp  GltfImportDialog.h  GraphicsDialog.cpp  GraphicsDialog.h  ObjImportDialog.cpp  ObjImportDialog.h  PipelineCreateDialog.cpp  PipelineCreateDialog.h  ShaderCreateDialog.cpp  ShaderCreateDialog.h  TerrainOptionsDialog.cpp  TerrainOptionsDialog.h  TextureImportDialog.cpp  TextureImportDialog.h  TopBar.cpp  TopBar.h
Source/Executable/: CMakeLists.txt  Common.h  Precomp.h  main.cpp
Source/Graphics/: AssetTracker.cpp  AssetTracker.h  CMakeLists.txt  Camera.cpp  Camera.h  Descriptor.cpp  Descriptor.h  FrameBuffer.h  GPUResource.cpp  GPUResource.h  Graphics.cpp  Graphics.h  GraphicsConfig.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Precomp.cpp  Precomp.h  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPassJob.cpp  RenderPassJob.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformAdapter.h  UniformAdapterRegister.cpp  UniformAdapterRegister.h  UniformBlock.cpp  UniformBlock.h  Utils.cpp  Utils.h
Source/Graphics/Interfaces/: IModel.h  IPipeline.h  IShader.h  ITexture.h
Source/Graphics/Resources/: GPUBuffer.h  GPUModel.h  GPUPipeline.h  GPUShader.h  GPUTexture.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h
Source/Physics/: CMakeLists.txt  Common.cpp  Common.h  PhysicsCommands.cpp  PhysicsCommands.h  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.h  PhysicsEntity.cpp  PhysicsEntity.h  PhysicsShapeManager.cpp  PhysicsShapeManager.h  PhysicsShapes.cpp  PhysicsShapes.h  PhysicsWorld.cpp  PhysicsWorld.h  Precomp.cpp  Precomp.h  Utils.cpp
Source/WorldEditor/: AnimationTest.cpp  AnimationTest.h  CMakeLists.txt  DefaultAssets.cpp  DefaultAssets.h  EditorMode.cpp  EditorMode.h  GameProto.cpp  GameProto.h  Gizmos.cpp  Gizmos.h  GrassRenderPass.cpp  GrassRenderPass.h  GridTest.cpp  GridTest.h  HexSolver.cpp  HexSolver.h  IDRenderPass.cpp  IDRenderPass.h  NavMeshGen.cpp  NavMeshGen.h  Precomp.h  QuadTreeTest.cpp  QuadTreeTest.h  main.cpp
(+216 files in other folders)
